--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,10 @@ services:
       - 8080:8080
     expose:
       - 8080
+    environment:
+      DATABASE_URL: "mysql://admin:password@localhost:3306/db"
+      AUTH_SECRET: development
+      PORT: 8080
   db:
     image: mysql:8.3.0
     restart: always
